[all][local][localws][test][smoke] Smoke / LocalGameRunner / LocalWsGameRunner are now OOP style. All SmoteTests have been reworked - now they have less entropy. Extracted DiceGenerator from LocalGameRunner.